--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
-    "anychart": "^8.11.0",
+    "anychart": "8.11.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "jquery": "1.9.1 - 3",
