--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "5.0.0",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
     "anychart": "8.11.0",
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.6.4",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.0",
-    "rxjs": "^6.5.4",
+    "bootstrap": "4.6.2",
+    "core-js": "2.5.4",
+    "jquery": "3.3.1",
+    "popper.js": "1.12.9",
+    "rxjs": "5.5.6",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "0.8.20"
   },
   "scripts": {
     "ng": "ng",
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular/cli": "1.7.4",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "5.0.0",
+    "@types/node": "9.4.7",
+    "@types/jasmine": "2.5.53",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
@@ -47,6 +47,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "^2.6.1"
   }
 }
